<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/white"
    tools:context=".profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <soup.neumorphism.NeumorphCardView
            android:id="@+id/neumorphCardView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:neumorph_lightSource="rightBottom"
            app:neumorph_shadowColorDark="@color/bg_light_purple"
            app:neumorph_shadowColorLight="@color/bg_light_purple"
            app:neumorph_shadowElevation="7dp"
            app:neumorph_shapeAppearance="@style/CustomShapeAppearance"
            app:neumorph_shapeType="flat"
            tools:ignore="MissingConstraints">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:foreground="@drawable/ic_camera"
                tools:ignore="ImageContrastCheck" />

        </soup.neumorphism.NeumorphCardView>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:autofillHints="Blood group"
            android:background="@drawable/bg_dialog_but"
            android:backgroundTint="@color/bg_light_purple"
            android:ems="10"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="center"
            android:hint="@string/space"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:textColor="@color/bg_purple"
            android:textSize="16sp"
            android:theme="@style/EditTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/neumorphCardView2"
            tools:ignore="SpeakableTextPresentCheck" />


        <TextView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="end"
            android:text="@string/save"
            android:textColor="@color/bg_purple"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/quicksand_bold"
        android:padding="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_dialog_but"
        android:text="@string/challenge"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>